 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 2
============

* [DanielPharos]: Fixed saving of paletted images padding bug, loading (and saving)
          - images from non-compressed pack files, PCX file saving is now working in
          - DevIL, fixed DDS saving of paletted images, added a bunch of DevIL settings,
          - and re-enabled DevIL DDS file saving.

* [DanielPharos]: Added a file version option to VTF file saving, and fixed a memory leak
          - and a bug causing non-alpha images to contain alpha after importing them.
          - Also fixed saving of paletted images as VTF files.

* [cdunde/DanielPharos]: Setup and initiated a whole new system to support model bones.

* [cdunde]: Did a whole write up on "How to Write Model Importers & Exporters"
          - for QuArK in the "Model-editor in QuArK" section of the InfoBase Docs.

* [DanielPharos]: Updated component error checking and added frame matching and\or
          - duplicating with independent names to avoid errors with other functions.

* [cdunde]: Fixed component's first frame not being set sometimes when the component's main
          - folder is selected.

* [DanielPharos]: Added a single-instance check to check that only one QuArK is running at
          - once.

* [cdunde]: Added ability to clear all selections by a single LMB click in any open area of
          - a Model Editor's view.

* [cdunde]: Fixed menu items that were not interacting with their config settings in the
          - Defaults.qrk file.

* [cdunde]: Updated addon, also new game pak on QuArK site. Don't know who did them for
          - NEXUIZ.
